--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,9 @@ on:
   workflow_dispatch:
   schedule:
   # every day
-    - cron: '0 1 * * *'
+  #  - cron: '0 1 * * *'
+  # weekly
+    - cron: '0 0 * * 0'
 
 env:
   REGISTRY: ghcr.io
