--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
         no_proxy: ${no_proxy:-}
         PYPI_URL: ${PYPI_URL:-}
         PYPI_HOST: ${PYPI_HOST:-}
-        ANSIBLE_VERSION: "${ANSIBLE_VERSION:-2.9.*}"
+        ANSIBLE_VERSION: "${ANSIBLE_VERSION:-2.10.*}"
         AWS_CLI_VERSION: ${AWS_CLI_VERSION:-}
         S3CMD_VERSION: ${S3CMD_VERSION:-}
         OSC_CLI_VERSION: ${OSC_CLI_VERSION:-}
-        TERRAFORM_VERSION: "${TERRAFORM_VERSION:-1.5.7}"
+        TERRAFORM_VERSION: "${TERRAFORM_VERSION:-1.5.7*}"
     environment:
       http_proxy: ${http_proxy}
       https_proxy: ${http_proxy}
